--- a/src/css/var.css
+++ b/src/css/var.css
@@ -7,6 +7,8 @@
     --additional-color: #757575;
     --white-color: #FFFFFF;
     --title-color: #F3F3F3;
+    --accent-color-hover: #7e0b0f;
+    --accent-color-active: #D90008;
 
     --padding-btn: 10px;
 
